# google_workspace_mcp

./: .dockerignore  .env.oauth21  .gitignore  .mcpbignore  Dockerfile  README.md  README_NEW.md  SECURITY.md  docker-compose.yml  entrypoint.sh  fastmcp_server.py  fly.toml  main.py  manifest.json  pyproject.toml  server.json
.claude-plugin/: marketplace.json  plugin.json
.github/instructions/: general.instructions.md
.github/workflows/: pytest.yml  ruff.yml
auth/: auth_info_middleware.py  credential_store.py  external_oauth_provider.py  google_auth.py  oauth21_session_store.py  oauth_callback_server.py  oauth_config.py  oauth_responses.py  port_resolver.py  scopes.py  service_decorator.py
core/: attachment_storage.py  comments.py  config.py  http_utils.py  log_formatter.py  server.py  tool_tiers.yaml  utils.py  warning_filters.py
gappsscript/: README.md  apps_script_tools.py
gcalendar/: calendar_helpers.py  calendar_tools.py
gchat/: chat_tools.py
gcontacts/: contacts_helpers.py  contacts_tools.py
gdocs/: docs_helpers.py  docs_markdown_writer.py  docs_tools.py
gdocs/managers/: batch_operation_manager.py
gdrive/: drive_helpers.py  drive_tools.py
gforms/: forms_tools.py
gmail/: gmail_helpers.py  gmail_tools.py
gsearch/: search_tools.py
gsheets/: __init__.py  sheets_tools.py
gslides/: slides_helpers.py  slides_tools.py
gtasks/: tasks_tools.py
helm-chart/workspace-mcp/: Chart.yaml  README.md  values.yaml
helm-chart/workspace-mcp/templates/: deployment.yaml  ingress.yaml  pvc.yaml
skills/managing-google-workspace/: SKILL.md
skills/managing-google-workspace/evaluations/: edit_doc.json  search_email.json  share_file.json
skills/managing-google-workspace/references/: apps-script.md  calendar.md  chat.md  contacts.md  docs-layout-workflow.md  docs.md  (+8 more)
tests/: helpers.py  test_cwe77_ruff_workflow.py  test_main_permissions_tier.py  test_slides_tools.py
tests/auth/: test_auth_info_middleware.py  test_branding.py  test_credential_security.py  test_gcs_credential_store.py  test_google_auth_callback_refresh_token.py  test_google_auth_pkce.py  test_google_auth_prompt_selection.py  test_google_auth_refresh_persistence.py  test_google_auth_stdio_preflight.py  test_httplib2_timeout.py  test_oauth21_session_store.py  test_oauth_callback_server.py  test_oauth_config_public_client.py  test_oauth_responses.py  test_port_resolver.py
tests/core/: test_allowed_redirect_uris.py  test_attachment_storage.py  test_comments.py  test_credentials_dir_permissions.py  test_http_oauth_scope_config.py  test_log_formatter.py  test_pdf_image_utils.py  test_service_decorator_cleanup.py  test_start_google_auth.py  test_user_google_email_defaults.py  test_userinfo_endpoint.py  test_validate_file_path.py  test_warning_filters.py  test_well_known_cache_control_middleware.py
tests/gappsscript/: test_apps_script_tools.py
tests/gcalendar/: test_correct_time_format_for_api.py  test_format_person.py  test_manage_event.py  test_rsvp_event.py
tests/gchat/: test_chat_tools.py
tests/gcontacts/: test_contacts_integration.py  test_contacts_tools.py  test_contacts_tools_v2.py  test_contacts_tools_v3.py
tests/gdocs/: test_advanced_doc_formatting.py  test_docs_markdown.py  test_docs_markdown_writer.py  test_insert_doc_tab_response.py  test_paragraph_style.py
tests/gdrive/: test_drive_file_content.py  test_drive_tools.py  test_ssrf_protections.py  test_url_download_limits.py
tests/gforms/: test_forms_tools.py
tests/gmail/: test_attachment_fix.py  test_body_format.py  test_draft_gmail_message.py  test_forward_gmail_message.py  test_get_gmail_attachment_content.py  test_get_gmail_thread_content_analysis.py  test_inline_image_attachments.py  test_thread_ownership_helpers.py
tests/gsheets/: test_duplicate_sheet.py
tests/integration/: test_update_tab_from_markdown.py
(+3 files in other folders)
